src/objects/Survey_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Survey Trigger</relationshipLabel>
        <relationshipName>Survey_Trigger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Trigger</relationshipLabel>
        <relationshipName>Survey_Trigger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <label>BJB Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Name__c</fullName>
        <label>CM Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Survey__c</fullName>
        <formula>Account__r.Disable_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>LEFT(Sign_Up__r.Name, FIND( &quot; &quot;, Sign_Up__r.Name ) -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>if(!ISBLANK(Sign_Up__c),

CASE(Sign_Up__r.Product_Type__c, 
&quot;Adwords Management&quot;, &quot;AdWords&quot;, 
&quot;Social Marketing&quot;, &quot;Facebook&quot;, 
&quot;SEO&quot;, &quot;SEO&quot;, 
&quot;&quot;),

if(CONTAINS(Account_Product__r.Name,&apos;Adwords&apos;), &apos;AdWords&apos;,
   if(CONTAINS(Account_Product__r.Name,&apos;SEO&apos;), &apos;SEO&apos;,
      if(CONTAINS(Account_Product__r.Name,&apos;Facebook&apos;), &apos;Facebook&apos;,
         if(CONTAINS(Account_Product__r.Name,&apos;Social Media&apos;), &apos;Social Media&apos;, &apos;&apos;
         )
      )
   )
)
 

)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipLabel>Survey Trigger</relationshipLabel>
        <relationshipName>Survey_Trigger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>Setup Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>simplesurvey__Survey__c</referenceTo>
        <relationshipLabel>Survey Trigger</relationshipLabel>
        <relationshipName>Survey_Trigger</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Type__c</columns>
        <columns>Survey_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST - {000000}</displayFormat>
        <label>SurveryTrigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Trigger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>